# CSlibs

./: ChangeLog-internal.txt  ChangeLog.txt  CrystalSpace home page.url  Deploying Applications Built Against cs-win32libs.rtf  Deploying Applications Built Against cs-winlibs.rtf  Jamfile.in  Jamfile.static  Readme.rtf  build-cygwin.sh  build-environment.example  build-mingw.sh  build-mingw64.sh  build-setup.sh  bullet_pc.sh  compile.txt  configure.ac  copy_headers.sh  pack_source.sh  rebase.sh  rename-cg-x64.sh  version.inc
projects/: CEGUIFalagardBase-vc7_static_debug.vcproj  CEGUIFalagardBase-vc8_static.vcproj  CEGUIFalagardBase-vc8_static_debug.vcproj  CEGUIFalagardBase.vcproj  CEGUIFalagardBase_debug.vcproj  CEGUIFalagardBase_static.vcproj  CSlibs.sln  CSlibs_vc7.sln  build_cslibs.vcproj  jam.vcproj  lib3ds.vcproj  lib3ds_static.vcproj  libCEGUIBase-vc7_static_debug.vcproj  libCEGUIBase-vc8_static.vcproj  libCEGUIBase-vc8_static_debug.vcproj  libCEGUIBase.vcproj  libCEGUIBase_debug.vcproj  libCEGUIBase_static.vcproj  libCEGUIBase_static_debug.vcproj  libbullet-vc7.vcproj  libbullet-vc7_debug.vcproj  libbullet-vc8.vcproj  libbullet.vcproj  libbullet_debug.vcproj  libbulletccdphysics-vc8.vcproj  libbulletccdphysics-vc8_debug.vcproj  libbulletccdphysics_debug.vcproj  libbulletdynamics-vc7.vcproj  libbulletdynamics-vc7_debug.vcproj  libbulletdynamics-vc8.vcproj  libbulletdynamics-vc8_debug.vcproj  libbulletdynamics.vcproj  libbulletdynamics_debug.vcproj  libbulletmath-vc7.vcproj  libbulletmath-vc7_debug.vcproj  libbulletmath-vc8_debug.vcproj  libbulletmath.vcproj  libbulletmath_debug.vcproj.old  libbulletphysicsinterfacecommon-vc7.vcproj  libbulletphysicsinterfacecommon-vc8.vcproj  (+40 more)
source/: .cvsignore  Jamfile  getlibs.sh  lib3ds.jam  lib3ds.rc  libCEGUI.jam  libbullet.jam  libcaca.jam  libcaca.rc  libcaca.vcproj  libcacacommon.rc  libcal3d.jam  libcal3dvc.rc  libceguibase.rc  libceguicommon.rcinc  libfreetype2.rc  libjpeg.rc  libjs.jam  libjs.rc  libmng.def  libmng.jam  libode.def  libode.rc  libogg.rc  libpng.rc  libwx.jam  (+14 more)
(+1613 files in other folders)
